--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="style.css">
     <title>Odin - Admin Dashboard</title>
 </head>
@@ -10,11 +11,98 @@
 
     <div id="mainContainer">
         <nav id="navbar">
-            NavBar
+            <div class="section one">
+                <div id="search">
+                    <input type="search">
+                </div>
+
+                <div id="user">
+                    <div id="userName">
+                        <div class="img">
+                            .
+                        </div>
+                        <p>John Doe</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section two">
+                <div id="userInfo">
+                    <div class="img">
+                        .
+                    </div>
+                    <p>Hi there,</p>
+                    <h2>Morgan Oakley (@morgan)</h2>
+                </div>
+
+                <div id="buttons">
+                    <button type="button">new</button>
+                    <button type="button">Upload</button>
+                    <button type="button">Share</button>
+                </div>
+            </div>
         </nav>
 
         <aside id="sidebar">
-            Sidebar
+            <h1>Dashboard</h1>
+            <ul>
+                <li>
+                    <span class="material-symbols-outlined">
+                        home
+                    </span>
+                    Home
+                </li>
+                <li>
+                    <span class="material-symbols-outlined">
+                        account_circle
+                    </span>
+                    Profile
+                </li>
+                <li>
+                    <span class="material-symbols-outlined">
+                        chat_bubble
+                    </span>
+                    Messages
+                </li>
+                <li>
+                    <span class="material-symbols-outlined">
+                        browse_activity
+                    </span>
+                    History
+                </li>
+                <li>
+                    <span class="material-symbols-outlined">
+                        task_alt
+                    </span>
+                    Tasks
+                </li>
+                <li>
+                    <span class="material-symbols-outlined">
+                        groups
+                    </span>
+                    Communities
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <span class="material-symbols-outlined">
+                        settings
+                    </span>
+                    Settings
+                </li>
+                <li>
+                    <span class="material-symbols-outlined">
+                        help
+                    </span>
+                    Support
+                </li>
+                <li>
+                    <span class="material-symbols-outlined">
+                        lock
+                    </span>
+                    Privacy
+                </li>
+            </ul>
         </aside>
 
         <div id="container">
