Add Navbar's style

--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
         <nav id="navbar">
             <div class="section one">
                 <div id="search">
+                    <span class="material-symbols-outlined">
+                        search
+                    </span>
                     <input type="search">
                 </div>
 
                 <div id="user">
+                    <span class="material-symbols-outlined">
+                        notifications
+                    </span>
                     <div id="userName">
                         <div class="img">
                             .
@@ -31,12 +37,14 @@
                     <div class="img">
                         .
                     </div>
-                    <p>Hi there,</p>
-                    <h2>Morgan Oakley (@morgan)</h2>
+                    <div id="userInfoInfo">
+                        <p>Hi there,</p>
+                        <h2>Morgan Oakley (@morgan)</h2>
+                    </div>
                 </div>
 
                 <div id="buttons">
-                    <button type="button">new</button>
+                    <button type="button">New</button>
                     <button type="button">Upload</button>
                     <button type="button">Share</button>
                 </div>
