Add Container's style

--- a/index.html
+++ b/index.html
@@ -114,7 +114,161 @@
         </aside>
 
         <div id="container">
-            Container
+            <div id="proyects">
+                <h3>Proyects</h3>
+                <div id="proyectsContainer">
+                    <div class="card">
+                        <h4>Super Cool Project</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum esse voluptatibus ratione.</p>
+                        <div class="actions">
+                            <span class="material-symbols-outlined">
+                                star
+                            </span>
+                            <span class="material-symbols-outlined">
+                                visibility
+                            </span>
+                            <span class="material-symbols-outlined">
+                                share
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h4>Impossible App</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum esse voluptatibus ratione.</p>
+                        <div class="actions">
+                            <span class="material-symbols-outlined">
+                                star
+                            </span>
+                            <span class="material-symbols-outlined">
+                                visibility
+                            </span>
+                            <span class="material-symbols-outlined">
+                                share
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h4>Ad Blocker</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum esse voluptatibus ratione.</p>
+                        <div class="actions">
+                            <span class="material-symbols-outlined">
+                                star
+                            </span>
+                            <span class="material-symbols-outlined">
+                                visibility
+                            </span>
+                            <span class="material-symbols-outlined">
+                                share
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h4>Less Cool Project</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum esse voluptatibus ratione.</p>
+                        <div class="actions">
+                            <span class="material-symbols-outlined">
+                                star
+                            </span>
+                            <span class="material-symbols-outlined">
+                                visibility
+                            </span>
+                            <span class="material-symbols-outlined">
+                                share
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h4>Easy Peasy App</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum esse voluptatibus ratione.</p>
+                        <div class="actions">
+                            <span class="material-symbols-outlined">
+                                star
+                            </span>
+                            <span class="material-symbols-outlined">
+                                visibility
+                            </span>
+                            <span class="material-symbols-outlined">
+                                share
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h4>Money Maker</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum esse voluptatibus ratione.</p>
+                        <div class="actions">
+                            <span class="material-symbols-outlined">
+                                star
+                            </span>
+                            <span class="material-symbols-outlined">
+                                visibility
+                            </span>
+                            <span class="material-symbols-outlined">
+                                share
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="announcements">
+                <h3>announcements</h3>
+                <div class="card">
+                    <div id="announcement">
+                        <h5>Site Maintenance</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, dicta...</p>
+                        <hr>
+                    </div>
+                    <div id="announcement">
+                        <h5>Site Maintenance</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, dicta...</p>
+                        <hr>
+                    </div>
+                    <div id="announcement">
+                        <h5>Site Maintenance</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, dicta...</p>
+                    </div>
+                </div>
+            </div>
+            <div id="trending">
+                <h3>Trending</h3>
+                <div class="card">
+                    <div class="user">
+                        <div class="img">
+                            .
+                        </div>
+                        <div class="userInfo">
+                            <p class="userName">@tegan</p>
+                            <p class="title">World Peace Builder</p>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <div class="img">
+                            .
+                        </div>
+                        <div class="userInfo">
+                            <p class="userName">@morgan</p>
+                            <p class="title">Super Cool Project</p>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <div class="img">
+                            .
+                        </div>
+                        <div class="userInfo">
+                            <p class="userName">@tegan</p>
+                            <p class="title">Life Changing App</p>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <div class="img">
+                            .
+                        </div>
+                        <div class="userInfo">
+                            <p class="userName">@tegan</p>
+                            <p class="title">No traffic Maker</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     
